--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,9 @@ RewriteRule . /index.php [L]
 </IfModule>
 # END WordPress 
 
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php74” package as the default “PHP” programming language.
