--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-json": "*",
         "anlutro/l4-settings": "^0.7.3",
         "barryvdh/laravel-dompdf": "^0.8.2",
+        "barryvdh/laravel-ide-helper": "~2.0",
         "benwilkins/laravel-fcm-notification": "^4.0",
         "darryldecode/cart": "^4.2",
         "doctrine/dbal": "^2.7",
@@ -35,6 +36,7 @@
         "spatie/laravel-permission": "^2.12",
         "srmklive/paypal": "1.7.0",
         "symfony/translation-contracts": "^1.1.6",
+        "themsaid/laravel-langman": "^1.3",
         "yajra/laravel-datatables": "^1.0"
     },
     "require-dev": {
