--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^7.2.0",
         "ext-curl": "*",
         "ext-json": "*",
-        "anlutro/l4-settings": "^0.7.3",
+        "anlutro/l4-settings": "master",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "barryvdh/laravel-ide-helper": "~2.0",
         "benwilkins/laravel-fcm-notification": "^4.0",
@@ -17,10 +17,10 @@
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0",
-        "infyomlabs/adminlte-templates": "5.6.x-dev",
+        "infyomlabs/adminlte-templates": "6.0",
         "kylekatarnls/laravel-carbon-2": "^1.0.0",
-        "laravel/cashier": "~7.0",
-        "laravel/framework": "5.8.*",
+   
+        "laravel/framework": "^6.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.8.*",
