--- a/composer.json
+++ b/composer.json
@@ -5,22 +5,21 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2.0",
+        "php": "^7.2.5|^8.0",
         "ext-curl": "*",
         "ext-json": "*",
-        "anlutro/l4-settings": "master",
+        "anlutro/l4-settings": "^0.7.3",
         "barryvdh/laravel-dompdf": "^0.8.2",
-        "barryvdh/laravel-ide-helper": "~2.0",
         "benwilkins/laravel-fcm-notification": "^4.0",
         "darryldecode/cart": "^4.2",
         "dirape/token": "^2.3",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0",
-        "infyomlabs/adminlte-templates": "6.0",
+        "infyomlabs/adminlte-templates": "5.6.x-dev",
         "kylekatarnls/laravel-carbon-2": "^1.0.0",
-   
-        "laravel/framework": "^6.0",
+        "laravel/cashier": "~7.0",
+        "laravel/framework": "5.8.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.8.*",
@@ -29,6 +28,7 @@
         "nesbot/carbon": "2.31.0 as 1.39.0",
         "orangehill/iseed": "^2.6",
         "overtrue/laravel-lang": "~3.0",
+        "pusher/pusher-php-server": "~4.0",
         "rap2hpoutre/laravel-log-viewer": "^0.15.0",
         "razorpay/razorpay": "2.*",
         "smartervision/laravel-generator": "dev-master",
@@ -65,9 +65,11 @@
             "Tests\\": "tests/"
         }
     },
+ 
     "extra": {
         "laravel": {
             "dont-discover": [
+              
             ]
         }
     },
