--- a/.htaccess
+++ b/.htaccess
@@ -6,8 +6,10 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
-# END WordPress 
-
+# END WordPress
+<IfModule mod_php5.c>
+php_value max_input_vars 10000
+</IfModule>
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
